[gd_scene load_steps=7 format=3 uid="uid://b11xbt4nnsg8g"]

[ext_resource type="Script" uid="uid://cj3ilpdiks6wl" path="res://Scripts/hibernation_ability.gd" id="1_1mg8k"]
[ext_resource type="FontFile" uid="uid://tcbfhi2f14ax" path="res://m5x7.ttf" id="2_ixlg0"]
[ext_resource type="Texture2D" uid="uid://dfbxl1c3vtj7i" path="res://Sprites/Currently Used/HibernationGizmo-Sheet.png" id="2_sn5k5"]

[sub_resource type="Animation" id="Animation_pc3w2"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("sleep_sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}

[sub_resource type="Animation" id="Animation_uo868"]
resource_name = "sleep_animation"
length = 1.2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("sleep_sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9, 1),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4, 5, 6, 7, 8, 9, 11]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_jy168"]
_data = {
&"RESET": SubResource("Animation_pc3w2"),
&"sleep_animation": SubResource("Animation_uo868")
}

[node name="hibernation_ability" type="Node2D"]
script = ExtResource("1_1mg8k")

[node name="sleep_timer" type="Timer" parent="."]
wait_time = 30.0
one_shot = true

[node name="Sleep_countdown" type="Label" parent="."]
visibility_layer = 3
z_index = 6
offset_left = -281.0
offset_top = -554.0
offset_right = 284.0
offset_bottom = -244.0
theme_override_colors/font_outline_color = Color(0.00184107, 0.00184107, 0.00184107, 1)
theme_override_constants/outline_size = 40
theme_override_fonts/font = ExtResource("2_ixlg0")
theme_override_font_sizes/font_size = 300
text = "0:00"
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 3

[node name="increment_effect_timer" type="Timer" parent="."]
wait_time = 10.0
autostart = true

[node name="hibernation_effect_timer" type="Timer" parent="."]
one_shot = true

[node name="sleep_sprite" type="Sprite2D" parent="."]
z_index = 6
position = Vector2(0, -40)
scale = Vector2(33, 32)
texture = ExtResource("2_sn5k5")
hframes = 12

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_jy168")
}

[connection signal="timeout" from="sleep_timer" to="." method="_on_sleep_timer_timeout"]
[connection signal="timeout" from="increment_effect_timer" to="." method="_on_increment_effect_timer_timeout"]
[connection signal="timeout" from="hibernation_effect_timer" to="." method="_on_hibernation_effect_timer_timeout"]
